# advent_of_code2022

./: .gitignore  Cargo.toml
src/: day1_calorie_counting.rs  day2_rock_paper_scissors.rs  main.rs
src/utils/: aoc_traits_alg.rs  array_traits.rs  mod.rs  string_processing.rs
