[package]
name = "advent_of_code2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_calorie_counting"
test = false
bench = false

[[bin]]
name = "day2_rock_paper_scissors"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
